@@ -280,7 +280,7 @@
   <tr>
     <td valign="top">fixlast</td>
     <td valign="top">Whether to add a missing EOL to the last line
-                     of a processed file. <b>Since Ant 1.6.1</b></td>
+                     of a processed file.<br/>Ignored if EOL is asis.<br/><b>Since Ant 1.6.1</b></td>
     <td align="center" colspan="2">No; default is <i>true</i></td>
   </tr>
 </table>
